<?xml version="1.0" encoding="utf-8"?>
<resources>
	<item type="id" name="toolbar" />
	<item type="id" name="activityRoot" />
	<item type="id" name="fragmentRoot" />
	<item type="id" name="adapterRoot" />
	<item type="id" name="details" />

	<item type="id" name="properties" />
	<item type="id" name="rooms" />
	<item type="id" name="items" />
	<item type="id" name="lists" />

	<item type="id" name="title" />
	<item type="id" name="description" />
	<item type="id" name="image" />
	<item type="id" name="type" />
	<item type="id" name="count" />
	<item type="id" name="stats" />

	<item type="id" name="btn_save" />
</resources>
