<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
	<!ENTITY nbsp "&#160;"><!-- non-breaking space, http://www.fileformat.info/info/unicode/char/00A0/index.htm -->
	<!-- See TypographyQuotes lint check-->
	<!ENTITY lquot "&#8220;"><!-- left double quotation mark, http://www.fileformat.info/info/unicode/char/201C/index.htm -->
	<!ENTITY rquot "&#8221;"><!-- right double quotation mark, http://www.fileformat.info/info/unicode/char/201D/index.htm -->
	]>
<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Magic Home Inventory</string>
	<string name="app_name_short">@string/home_title</string>
	<string name="home_title">Inventory</string>
	<string name="navigation_title">Navigation</string>
	<string name="image_title">Image</string>
	<string name="image_loading_external">Preparing image for external app…</string>
	<string name="sunburst_title">Sunburst Diagram</string>

	<string name="welcome_title">First startup… Welcome!</string>
	<string name="welcome_question" tools:ignore="TypographyQuotes"><![CDATA[
		Would you like me to create a sample inventory for you?
		<i>(You can also do it later from the action bar if your inventory is empty.)</i>
	]]></string>
	<string name="welcome_help_tip">See About for help and usage tips!</string>
	<string name="welcome_backup">Import backup</string>

	<string name="pref_app_about_title">@string/about_title</string>
	<string name="pref_app_about_desc">@string/app_name</string>
	<string name="pref_app_about_package">@string/app_package</string>
	<string name="pref_app_manage_space_title">@string/manage_space_title</string>
	<string name="backup_import_result_app_name">@string/app_name</string>

	<string name="action_read_more">Read more</string>
	<string name="action_picture_take">Take Picture</string>
	<string name="action_picture_reset">Reset Picture</string>
	<string name="action_picture_remove">Remove Picture</string>
	<string name="action_save">Save</string>
	<string name="action_undo">Undo</string>
	<string name="action_delete">Delete</string>
	<string name="action_move">Move</string>
	<string name="action_share">Share</string>
	<string name="action_share_details">Share Details</string>
	<string name="action_share_image">Share Image</string>
	<string name="action_search">Search Items</string>
	<string name="action_sunburst_open">View in Inventory</string>
	<string name="action_sunburst_ignore">Hide from diagram</string>
	<string name="action_sunburst_ignore_reset">Display all hidden</string>
	<string name="action_demo_inventory">Create sample inventory</string>

	<plurals name="action_delete_title">
		<item quantity="one">Deleting %2$s &#8220;%3$s&#8221;</item>
		<item quantity="other">Deleting %1$d %2$s</item>
	</plurals>
	<plurals name="action_delete_success">
		<item quantity="one">Deleted %2$s &#8220;%3$s&#8221;.</item>
		<item quantity="other">%1$d %2$s deleted.</item>
	</plurals>
	<plurals name="action_delete_failed">
		<item quantity="one">Failed to delete %2$s &#8220;%3$s&#8221;!</item>
		<item quantity="other">Deleting %1$d %2$s failed!</item>
	</plurals>
	<plurals name="action_delete_confirm">
		<item quantity="one">Are you sure you want to delete the %2$s named &#8220;%3$s&#8221; with everything in it?</item>
		<item quantity="other">Are you sure you want to delete %1$d %2$s with everything in them?</item>
	</plurals>
	<plurals name="action_delete_confirm_only">
		<item quantity="one">Are you sure you want to delete the %2$s named &#8220;%3$s&#8221;?</item>
		<item quantity="other">Are you sure you want to delete %1$d %2$s?</item>
	</plurals>
	<plurals name="action_delete_confirm_empty">
		<item quantity="one">Are you sure you want to delete the empty %2$s named &#8220;%3$s&#8221;?</item>
		<item quantity="other">Are you sure you want to delete %1$d empty %2$s?</item>
	</plurals>
	<plurals name="action_delete_details">
		<item quantity="one">The following %2$s inside will be also deleted with all its contents: %3$s</item>
		<item quantity="other">The following %1$d %2$s inside will be also deleted with all their contents: %3$s</item>
	</plurals>
	<plurals name="action_delete_details_keep">
		<item quantity="one">The following %2$s will not be affected: %3$s</item>
		<item quantity="other">The following %1$d %2$s will not be affected: %3$s</item>
	</plurals>


	<plurals name="action_move_title">
		<item quantity="one">Moving %2$s &#8220;%5$s&#8221;</item>
		<item quantity="other">Moving %1$d %2$s</item>
	</plurals>
	<plurals name="action_move_success">
		<item quantity="one">Moved %2$s &#8220;%5$s&#8221; to %3$s &#8220;%4$s&#8221;.</item>
		<item quantity="other">%1$d %2$s moved to %3$s &#8220;%4$s&#8221;.</item>
	</plurals>
	<plurals name="action_move_failed">
		<item quantity="one">Failed to move %2$s &#8220;%5$s&#8221; to %3$s &#8220;%4$s&#8221;!</item>
		<item quantity="other">Moving %1$d %2$s to %3$s &#8220;%4$s&#8221; failed!</item>
	</plurals>
	<plurals name="action_move_confirm">
		<item quantity="one">Are you sure you want to move the %2$s named &#8220;%5$s&#8221; with everything in it to %3$s &#8220;%4$s&#8221;?</item>
		<item quantity="other">Are you sure you want to move %1$d %2$s with everything in them to %3$s &#8220;%4$s&#8221;?</item>
	</plurals>
	<string name="action_move_pick_title">Move to</string>
	<string name="action_move_pick_requested">Please select a %1$s</string>
	<string name="action_move_pick_forbidden">Cannot move here, select another %1$s.</string>

	<string name="action_rename_title">Renaming %1$s &#8220;%2$s&#8221;</string>
	<string name="action_rename_ask">Please enter the new name for %1$s &#8220;%2$s&#8221;!</string>
	<string name="action_rename_success">Renamed %1$s &#8220;%2$s&#8221; to &#8220;%3$s&#8221;.</string>
	<string name="action_rename_failed">Failed to rename %1$s from &#8220;%2$s&#8221; to &#8220;%3$s&#8221;!</string>

	<string name="generic_location_change">&#8220;%1$s&#8221; is now in &#8220;%2$s&#8221;.</string>
	<string name="generic_error_save">Cannot save.</string>
	<string name="generic_error_unique_name">The name you provided already exists.</string>
	<string name="generic_error_length_name">The name you provided is empty.</string>
	<string name="generic_error_empty_text">Please enter some text!</string>
	<string name="generic_error_missing" tools:ignore="PluralsCandidate">The %1$s with id=%2$d does not exist.</string>

	<string name="generic_edit_dirty_title">Unsaved changes</string>
	<string name="generic_edit_dirty_message">Continuing will discard any changes.</string>

	<plurals name="selection_count">
		<item quantity="other">%d selected</item>
	</plurals>
	<string name="selection_selectAll">Select All</string>
	<string name="selection_selectAll_short">All</string>
	<string name="selection_selectInv">Invert selection</string>
	<string name="selection_selectInv_short">Invert</string>

	<plurals name="category">
		<item quantity="one">category</item>
		<item quantity="other">categories</item>
	</plurals>
	<string name="category_list">Categories</string>
	<string name="category_details">Category</string>
	<string name="category_share">Share Category</string>
	<string name="category_guide">Category Help</string>
	<string name="category_feedback">Suggest Category</string>
	<string name="category_open">Open with…</string>
	<string name="category_save">Export Help</string>
	<string name="category_actions">Category actions</string>
	<string name="category_keywords_of">Keywords for %s</string>
	<string name="category_keywords_empty">No keywords.</string>
	<string name="category_keywords">Show Keywords</string>
	<string name="category_goto">Jump to Category</string>
	<string name="category_suggest">Suggest Categories</string>
	<string name="category_suggest_show_more">Tap to show more…</string>
	<string name="category_suggest_empty">Can’t find any matching categories, sorry. Try to enter more text, or select a category from the dropdown above.</string>
	<string name="category_viewAllItems">Flatten Subcategories</string>
	<plurals name="label_category_subs"><!-- Alternatively %1$d&#160;more -->
		<item quantity="one">+%1$d</item>
		<item quantity="other">+%1$d</item>
	</plurals>
	<string name="label_category_subs_with_title">^1 <small>(^2)</small></string>

	<plurals name="list">
		<item quantity="one">list</item>
		<item quantity="other">lists</item>
	</plurals>
	<string name="list_list">Lists</string>
	<string name="list_details">List</string>
	<string name="list_edit">Rename List</string>
	<string name="list_delete">Delete List</string>
	<string name="list_manage">Manage Lists</string>
	<string name="list_empty_main">Create a list with the button below. You can manage list contents from the menu of items.</string>
	<string name="item_empty_list">Your items will show up here. You can manage list contents from the menu of items.</string>
	<string name="list_error_new">Cannot create new list named &#8220;%s&#8221;.</string>
	<string name="list_add_item_title">Adding Items to Lists</string>
	<string name="list_add_item_description">Navigate to an Item that you want to add to a List and select “%s” from the menu.</string>

	<string name="recent_list">Recents</string>
	<string name="recent_empty_list">Your recently viewed items will show up here. Create or navigate your inventory.</string>

	<plurals name="item">
		<item quantity="one">item</item>
		<item quantity="other">items</item>
	</plurals>
	<string name="item_list">Items</string>
	<string name="item_details">Item</string>
	<string name="item_add">Add Item Inside</string>
	<string name="item_new">New Item</string>
	<string name="item_edit">Edit Item</string>
	<string name="item_delete">Delete Item</string>
	<string name="item_delete_many">Delete Items</string>
	<string name="item_categorize">Change Category</string>
	<string name="item_categorize_title">Change Category of %1$s</string>
	<string name="item_categorize_many">@string/item_categorize</string>
	<string name="item_categorize_title_many">@string/item_categorize_many</string>
	<string name="item_share">Share Item</string>
	<!-- %1$s is the item name, %2$s is all the containers of item, %3$s is the room name, %4$s is the property name -->
	<string name="item_share_desc">%1$s inside %2$s in %3$s at %4$s</string>
	<!-- %1$s is the item name, %2$s is the room name, %3$s is the property name -->
	<string name="item_share_desc_room">%1$s in %2$s at %3$s</string>

	<string name="item_move">Move Item</string>
	<string name="item_move_many">Move Items</string>
	<string name="item_name_hint">Item Name</string>
	<string name="item_description_hint">Item Description</string>
	<string name="item_empty_child">Create items with the button below. You can then open them and add more inside.</string>
	<string name="item_empty_category">Your items will show up here. Set the category of some items for them to show up here.</string>

	<plurals name="property">
		<item quantity="one">property</item>
		<item quantity="other">properties</item>
	</plurals>
	<string name="property_list">Properties</string>
	<string name="property_details">Property</string>
	<string name="property_add">Add Property</string>
	<string name="property_new">New Property</string>
	<string name="property_edit">Edit Property</string>
	<string name="property_change_type">Change Type of %1$s</string>
	<string name="property_delete">Delete Property</string>
	<string name="property_delete_many">Delete Properties</string>
	<string name="property_share">Share Property</string>
	<!-- %1$s is the property name -->
	<string name="property_share_desc">%1$s</string>
	<string name="property_name_hint">Property Title</string>
	<string name="property_description_hint">Property Description</string>
	<string name="property_empty_child">Create a property with the button below. You can then open it and add rooms inside.</string>

	<plurals name="room">
		<item quantity="one">room</item>
		<item quantity="other">rooms</item>
	</plurals>
	<string name="room_list">Rooms</string>
	<string name="room_details">Room</string>
	<string name="room_add">Add Room</string>
	<string name="room_new">New Room</string>
	<string name="room_edit">Edit Room</string>
	<string name="room_change_type">Change Type of %1$s</string>
	<string name="room_delete">Delete Room</string>
	<string name="room_delete_many">Delete Rooms</string>
	<string name="room_share">Share Room</string>
	<!-- %1$s is the room name, %2$s is the property name -->
	<string name="room_share_desc">%1$s at %2$s</string>
	<string name="room_move">Move Room</string>
	<string name="room_move_many">Move Rooms</string>
	<string name="room_name_hint">Room Title</string>
	<string name="room_description_hint">Room Description</string>
	<string name="room_location">In %1$s</string>
	<string name="room_viewAll">List All Rooms</string>
	<string name="room_empty_child">Create a room with the button below. You can then open it and add items inside.</string>
	<string name="room_empty_list">Your rooms will show up here. Go inside a property to create one.</string>

	<string name="types__prefix__opened" translatable="false">-</string>
	<string name="types__prefix__closed" translatable="false">+</string>
	<string name="types__prefix__no_children" translatable="false">&#32;</string>
	<string name="types__format__more">%1$s <annotation color="secondaryText">(more)</annotation></string>
	<string name="types__format__keywords">%1$s <annotation color="secondaryText">(%2$s)</annotation></string>
	<string name="types__format__source">%1$s <annotation color="secondaryText">- %2$s</annotation></string>
</resources>
