<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activity.data.MoveTargetActivity"
	>
	<include layout="@layout/inc_toolbar" />
	<TextView
		android:id="@+id/selection"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/unit_half"
		android:gravity="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"
		android:textIsSelectable="true"
		tools:text="@string/action_move_pick_title"
		/>
	<androidx.fragment.app.FragmentContainerView
		android:id="@id/activityRoot"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:tag="fragment"
		tools:background="@color/toolsBG"
		/>
	<TextView
		android:id="@+id/type"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/unit_half"
		android:layout_marginRight="@dimen/unit_half"
		android:gravity="end"
		android:textIsSelectable="true"
		tools:text="@string/action_move_pick_requested"
		/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		tools:ignore="ButtonStyle"
		>
		<!-- lint:ButtonStyle ignore for now, the screen looks strange if the buttons are not buttons -->
		<Button
			android:id="@android:id/button2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@android:string/cancel"
			/>
		<Button
			android:id="@android:id/button1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@android:string/ok"
			/>
	</LinearLayout>
</LinearLayout>
