<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@id/fragmentRoot"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<android.support.v4.widget.SwipeRefreshLayout
		android:id="@android:id/progress"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:enabled="false"
		>
		<android.support.v7.widget.RecyclerView
			android:id="@android:id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="@dimen/margin"
			android:scrollbars="vertical"
			/>
	</android.support.v4.widget.SwipeRefreshLayout>
	<ImageView
		android:id="@+id/fab"
		android:layout_width="56dp"
		android:layout_height="56dp"
		android:layout_gravity="bottom|end"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="16dp"
		android:src="@drawable/fab_add"
		android:elevation="4dp"
		android:visibility="gone"
		tools:visibility="visible"
		/>
</FrameLayout>
