<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<item
		android:id="@+id/action_export"
		android:title="@string/backup_export"
		android:icon="@android:drawable/ic_menu_upload"
		app:showAsAction="never"
		/>
	<item
		android:id="@+id/action_import"
		android:title="@string/backup_import"
		android:icon="@android:drawable/stat_sys_download_done"
		app:showAsAction="never"
		/>
	<item
		android:id="@+id/action_export_internal"
		android:title="@string/backup_export_internal"
		android:icon="@android:drawable/ic_menu_save"
		app:showAsAction="never"
		/>
	<item
		android:id="@+id/action_send"
		android:title="@string/backup_send"
		android:icon="@android:drawable/ic_menu_send"
		app:showAsAction="never"
		/>
	<item
		android:id="@+id/action_export_home"
		android:title="@string/backup_go_home"
		android:titleCondensed="@string/backup_go_home_condensed"
		android:icon="@android:drawable/ic_menu_revert"
		app:showAsAction="ifRoom|withText"
		/>
</menu>
